# femiadeniyi

./: .conf  .dockerignore  .firebaserc  .gitignore  .terraform.lock.hcl  CHANGELOG.md  Dockerfile  README.MD  RELEASE.md  bundle.ts  index.js  main.tf  package-lock.json  package.json  tsconfig.json  watcher.ts  webpack.config.ts
.github/workflows/: pipeline.yml
binaries/: Cargo.toml  Dockerfile
binaries/src/: main.rs
public/fa.com/: bundle.js  bundle.js.map  index.html
public/fa.com/tpl/: circle-animation.html  content1.html  sub-header.html
scripts/: index.ts  tsconfig.json
server/: main.go
server/src/: eventListeners.js  index.html  index.js
server/src/femi-apps-series/: main.dart.js
server/src/music/: flutter_service_worker.js  index.html  main.dart.js  version.json
server/src/music/assets/: AssetManifest.json  NOTICES
server/src/music/assets/files/: example.json
src/: app.ts  company-modal.html  eventListeners.js  femi_dash.mpd  index.html  index.js  index.ts  mp4box.js  racer_dash.mpd
src/_files/: story_dash.mpd
src/femi-apps-series/: flutter_service_worker.js  index.html
src/music/: index.html  index.js
website/: package-lock.json  sidebars.js
website/docs/: setting-up.md
